<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_margin"
    android:paddingRight="@dimen/default_margin">

    <View
        style="@style/seperator"
        android:layout_height="0.5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin64"
        android:gravity="center">

        <TextView
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stan" />

        <TextView
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/stan_app_ver" />


    </LinearLayout>

    <View
        style="@style/seperator"
        android:layout_height="0.5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin64"
        android:gravity="center">

        <TextView
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/build" />

        <TextView
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/build_num" />


    </LinearLayout>


</LinearLayout>