<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <!--    Normally we wouldn't hardcode repetitive layout.-->
    <!--    It's difficult to handle click events. "Standard" is selected as-->
    <!--    video quality in UI sample. Such settings needs to be saved in preferences and loaded when activity starts.-->
    <!--    In our case we'll just hardcode everything as per question demands.-->

    <RelativeLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/containerTick"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/sub_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qd" />

            <TextView
                android:id="@+id/textView3"
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/qd_msg" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/containerTick"
            android:layout_width="@dimen/margin48"
            android:layout_height="@dimen/margin48"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_check"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/click_background">

        <LinearLayout
            android:id="@+id/container_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/containerTick2"
            android:orientation="vertical">

            <TextView
                style="@style/sub_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd" />

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sd_msg" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/containerTick2"
            android:layout_width="@dimen/margin48"
            android:layout_height="@dimen/margin48"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_check" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/containerTick3"
            android:orientation="vertical">

            <TextView
                style="@style/sub_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bd" />

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/bd_msg" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/containerTick3"
            android:layout_width="@dimen/margin48"
            android:layout_height="@dimen/margin48"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_check"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>