<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <!--    Normally we wouldn't hardcode repetitive layout.-->
    <!--    It's difficult to handle click events. "Standard" is selected as-->
    <!--    video quality in UI sample. Such settings needs to be saved in preferences and loaded when activity starts.-->
    <!--    In our case we'll just hardcode everything as per question demands.-->

    <LinearLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin">


        <TextView
            android:id="@+id/textView2"
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_toLeftOf="@+id/switch1"
                android:text="@string/auto_msg" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="true"
                android:switchMinWidth="48dp"
                android:textOff="OFF"
                android:textOn="ON"
                app:thumbTint="@color/colorPrimary"
                app:trackTint="@drawable/checker_track" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin">


        <TextView
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_toLeftOf="@+id/switch2"
                android:text="@string/ask_msg" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="true"
                android:switchMinWidth="48dp"
                android:textOff="OFF"
                android:textOn="ON"
                app:thumbTint="@color/colorPrimary"
                app:trackTint="@drawable/checker_track" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin">


        <TextView
            style="@style/sub_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_toLeftOf="@+id/switch3"
                android:text="@string/cell_msg" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:checked="true"
                android:switchMinWidth="48dp"
                android:textOff="OFF"
                android:textOn="ON"
                app:thumbTint="@color/colorPrimary"
                app:trackTint="@drawable/checker_track" />
        </RelativeLayout>

    </LinearLayout>


    <View
        style="@style/seperator"
        android:layout_height="0.5dp" />


</LinearLayout>