<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin48"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

        <TextView
            style="@style/default_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dw_loc" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/click_background">

        <LinearLayout
            android:id="@+id/container_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/containerTick2"
            android:orientation="vertical">

            <TextView
                style="@style/sub_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/int_stg" />

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/dummy_storage" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/containerTick2"
            android:layout_width="@dimen/margin48"
            android:layout_height="@dimen/margin48"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_check" />

        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>