<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/appBar"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/default_margin"
    tools:context=".ui.Settings"
    tools:showIn="@layout/activity_settings">

<!--    Using custom scrollview-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin48"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin">

                <TextView
                    style="@style/title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/downloads"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin48"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin">

                <TextView
                    style="@style/default_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/downloads_wifi"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:switchMinWidth="48dp"
                    android:textOff="OFF"
                    android:textOn="ON"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:thumbTint="@color/colorPrimary"
                    app:trackTint="@drawable/checker_track" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin48"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin">

                <TextView
                    style="@style/default_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/downloads_quality" />

            </RelativeLayout>

            <include layout="@layout/custom_download_quality" />

            <include layout="@layout/custom_download_loc" />

            <include layout="@layout/custom_device_storage" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin48"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin">

                <TextView
                    style="@style/title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/stream"
                    android:textStyle="bold" />

            </RelativeLayout>

            <include layout="@layout/custom_streaming" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin48"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin">

                <TextView
                    style="@style/title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/abt"
                    android:textStyle="bold" />

            </RelativeLayout>

            <include layout="@layout/custom_about" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>