<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin48"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

        <TextView
            style="@style/default_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/dv_stg" />

    </RelativeLayout>

    <LinearLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/default_margin">

        <ProgressBar
            android:id="@+id/ProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:indeterminate="false"
            android:max="100"
            android:maxHeight="10dip"
            android:minHeight="10dip"
            android:progress="40"
            android:progressDrawable="@drawable/drawable_progress" />

    </LinearLayout>

    <LinearLayout
        style="@style/expandable_list_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/drawable_rounded_corner_blue" />

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/usd"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <View
                android:id="@+id/view2"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/drawable_rounded_corner_white" />

            <TextView
                style="@style/sub_content_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/av"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/seperator"
        android:layout_height="0.5dp" />


</LinearLayout>